--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -4,7 +4,7 @@ $color-black: #000000;
 $color-bg: #1c1b22;
 
 // FONTS
-$primary-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+$primary-font: 'Rubik', sans-serif;
 $base-font-size: 10px;
 
 // OFFSET
