--- a/src/scss/config/_common.scss
+++ b/src/scss/config/_common.scss
@@ -5,11 +5,12 @@
 *::before {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  text-decoration: none;
 }
 
 html {
   font-size: v.$base-font-size;
-  background-color: v.$color-bg;
+  background-color: v.$color-white;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: calc(800px + v.$mobile-container-padding-x);
+  max-width: calc(1366px + v.$mobile-container-padding-x);
   padding: {
     left: v.$mobile-container-padding-x;
     right: v.$mobile-container-padding-x;
@@ -27,4 +28,9 @@ body {
     left: auto;
     right: auto;
   }
+}
+
+a,
+button {
+  cursor: pointer;
 }
