--- a/src/scss/config/_common.scss
+++ b/src/scss/config/_common.scss
@@ -1,5 +1,6 @@
 @use 'variables' as v;
 
+
 *,
 *:after,
 *::before {
@@ -11,11 +12,19 @@
 html {
   font-size: v.$base-font-size;
   background-color: v.$color-white;
+  transition: all 1s ease;
+}
+
+.dark-mode {
+  color: v.$color-white;
+  background-color: black;
 }
 
 body {
   font-family: v.$primary-font;
+  min-height: 100vh;
 }
+
 
 .container {
   width: 100%;
