--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 
 // Components
 @use './components/title';
+@use './components/switch';
 @use './components/card';
 @use './components/students';
 @use './components/section-students';
