--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,3 +3,9 @@
 @use './config/common';
 
 // Components
+@use './components/title';
+@use './components/card';
+@use './components/students';
+@use './components/section-students';
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&family=VT323&display=swap');
